Do more example cleaning